<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchResultActivity" >

     <com.example.carousel.Carousel
        android:id="@+id/carousel"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/editName"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editName"
        android:animationDuration="150">
    </com.example.carousel.Carousel>

    <EditText
        android:id="@+id/editTextNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/notes"
        android:inputType="none"
        android:lines="@integer/threewordline" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/editTextNotes"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:contentDescription="@string/add_pic_video"
        android:src="@drawable/select_2"
        android:textAlignment="center" />
        
    <VideoView
        android:id="@+id/videoView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/editTextNotes"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNotes"
        android:layout_centerVertical="true"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/caption" >

        <requestFocus />
    </EditText>

</RelativeLayout>